[project]
name = "aurasr-comfyui"
description = "ComfyUI implementation of AuraSR"
version = "2.1.2"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/GreenLandisaLie/AuraSR-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "greenlandisalie"
DisplayName = "AuraSR-ComfyUI"
Icon = ""
