[project]
name = "aurasr-comfyui"
description = "ComfyUI implementation of AuraSR"
version = "3.0.0"
license = { file = "LICENSE.md" }

[project.urls]
Repository = "https://github.com/GreenLandisaLie/AuraSR-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "greenlandisalie"
DisplayName = "AuraSR-ComfyUI"
Icon = ""
